Assignment 17 - Implement Customer JPA Operations